--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,7 +3,7 @@
 
 
 body {
-  background-color: antiquewhite;
+  background-color: lightskyblue;
   color: brown;
   text-align: center;
   margin-top: 100px;
